--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -19,4 +19,16 @@
         <item name="android:maxLength">4</item>
         <item name="android:inputType">numberDecimal</item>
     </style>
+
+    <style name="IpInfoTitleTheme">
+        <item name="android:fontFamily">@font/noto_bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/AccentSecondaryLight</item>
+    </style>
+
+    <style name="IpInfoValueTheme">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/TextPrimaryLight</item>
+    </style>
 </resources>
