--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -29,6 +29,8 @@
     <style name="IpInfoValueTheme">
         <item name="android:fontFamily">@font/noto_regular</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:textColor">@color/TextPrimaryLight</item>
     </style>
 </resources>
