--- a/app/src/main/res/values-v23/style.xml
+++ b/app/src/main/res/values-v23/style.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/AccentLight</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/BackgroundDefaultLight</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 </resources>
