--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,6 +7,8 @@
         <item name="colorAccent">@color/AccentLight</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/BackgroundDefaultLight</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="OctetEditTextTheme">
