--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="BackgroundDefaultLight">#F6F6F6</color>
     <color name="BackgroundSecondaryLight">#FFFFFFFF</color>
     <color name="TextPrimaryLight">#0E0F15</color>
+    <color name="SnackbarTextLight">#FFFFFFFF</color>
+    <color name="SnackbarBackgroundColorLight">#323232</color>
     <color name="AccentLight">#0E0F15</color>
     <color name="AccentSecondaryLight">#00017D</color>
     <color name="ButtonBackgroundLight">#3F51B5</color>
