--- a/app/src/main/res/layout/layout_empty_placeholder.xml
+++ b/app/src/main/res/layout/layout_empty_placeholder.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/noto_regular"
         android:gravity="center"
         android:text="@string/component_empty_placeholder_description"
