--- a/app/src/main/res/values-v23/style.xml
+++ b/app/src/main/res/values-v23/style.xml
@@ -3,10 +3,12 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Customize your theme here. -->
-        <item name="colorPrimaryDark">@color/BackgroundDefaultLight</item>
+        <item name="colorPrimaryDark">@color/AccentSecondaryLight</item>
         <item name="colorPrimary">@color/BackgroundDefaultLight</item>
         <item name="colorAccent">@color/AccentLight</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/BackgroundDefaultLight</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
+
 </resources>
