--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,6 +17,7 @@
         <item name="android:minWidth">90dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:maxLength">4</item>
+        <item name="android:backgroundTint">@color/selector_octet_underline_light</item>
     </style>
 
     <style name="IpInfoTitleTheme">
