--- a/app/src/main/res/layout/bottomsheet_fragment_about_app.xml
+++ b/app/src/main/res/layout/bottomsheet_fragment_about_app.xml
@@ -23,6 +23,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="-40dp"
+            android:contentDescription="@string/content_description_icon_app"
             android:scaleType="centerCrop"
             android:src="@drawable/img_network" />
 
@@ -32,8 +33,9 @@
             android:layout_height="48dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:padding="8dp"
             android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/content_description_icon_back"
+            android:padding="8dp"
             android:src="@drawable/ic_arrow_back_24" />
 
         <com.google.android.material.textview.MaterialTextView
