--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -41,4 +41,12 @@
         <item name="colorPrimaryDark">@color/AccentSecondaryLight</item>
     </style>
 
+    <style name="MenuItemTheme">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:textColor">@color/TextPrimaryLight</item>
+    </style>
+
 </resources>
