--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="BackgroundDefaultLight">#F6F6F6</color>
     <color name="BackgroundSecondaryLight">#FFFFFFFF</color>
+    <color name="BackgroundThirdLight">#A4A4A4</color>
 
     <color name="TextPrimaryLight">#0E0F15</color>
     <color name="TextAdditionalLight">#A4A4A4</color>
